--- a/emoncms.conf
+++ b/emoncms.conf
@@ -1,12 +1,9 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
     root /var/www/emoncms;
     index index.php index.html index.htm;
-
-    # Make site accessible from http://localhost/
-    server_name localhost;
 
     # Make sure requests to URLs with /Modules do not
     # get rewritten to /index.php?q=
